# ParrotLLM

./: .gitignore  README.md  ToDos.md  _fix_phase8.py  eval_datasets.py  main.py  pyproject.toml  tune.py
configs/: __init__.py  architecture_test.yaml  default.yaml  experiment_a_small.yaml  experiment_proxy.yaml  inference_dummy.yaml  loggingConfig.py  preprocess.yaml  preprocessConfig.py  preprocess_dummy.yaml  preprocess_var_a.yaml  preprocess_var_b.yaml  preprocess_var_c.yaml  preprocess_var_d.yaml  project_config.py  test.yaml  train_dummy.yaml  trainingConfig.py  tune.yaml
configs/architecture/: architecture_test.yaml
configs/chat/: chat_dummy.yaml
configs/eval/: eval_dummy.yaml
configs/gpu_test/: ddp_smoke.yaml
configs/preprocessing/: experiment_a_small.yaml  preprocess_smoketest.yaml  preprocess_var_a.yaml  preprocess_var_b.yaml  preprocess_var_c.yaml  preprocess_var_d.yaml  preprocess_var_e.yaml  preprocess_var_f.yaml
configs/training/: train_dummy.yaml  train_smoketest.yaml  trainingConfig.py
configs/tuning/: dataset_eval.yaml  tune.yaml  tuneConfig.py
docs/: 2026-04-02-lr-scheduler-review.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  DATASET_EXPERIMENT_PLAN.md  ToDos.md  notebook_optimization.md  preprocess_vectorization.md
docs/gpu_cluster/: TRAINING_COOKBOOK.md  TRAINING_TACTIC.md
results/dataset_eval/: dataset_ranking.json
results/hp_tuning/: REPORT.md  all_trials.json  best_params.yaml
scripts/: plot_training.py
src/: logging_utils.py  utils.py
tests/: conftest.py  test_logging.py  test_plot_training.py  test_tune.py
(+28 files in other folders)
